# satysfi-parallel

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  Satyristes  index.html  parallel-doc.html  parallel-doc.template.saty  parallel.org  satysfi-parallel-doc.opam  satysfi-parallel.opam
.github/workflows/: doc.yml  release.yml
