opam-version: "2.0"
name: "satysfi-parallel"
version: "0.1.0"
synopsis: "Typesetting two texts in parallel"
description: """Typesetting two texts in parallel"""

maintainer: "Masaki Waga <masakiwaga@gmail.com>"
authors: "Masaki Waga <masakiwaga@gmail.com>"
license: "MIT"
homepage: "https://github.com/MasWag/satysfi-parallel"
bug-reports: "https://github.com/MasWag/satysfi-parallel/issues"
dev-repo: "git+https://github.com/MasWag/satysfi-parallel.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.7"}
  "satysfi-dist"
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "parallel"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
